--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "rxjs": "^6.5.2"
   }
 }
