--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/webpack": "^4.4.34",
     "@types/webpack-dev-server": "^3.1.7",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.19.1",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
