--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^12.6.2",
+    "@types/uuid": "^3.4.5",
     "@types/webpack": "^4.4.34",
     "@types/webpack-dev-server": "^3.1.7",
     "html-webpack-plugin": "^3.2.0",
@@ -37,6 +38,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
-    "rxjs": "^6.5.2"
+    "uuid": "^3.3.2",
+    "ws": "^7.1.1"
   }
 }
