--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@types/ws": "^6.0.2",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "uuid": "^3.3.2",
