--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/ws": "^6.0.2",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "rxjs": "^6.5.2",
     "uuid": "^3.3.2",
     "ws": "^7.1.1"
   }
