--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^1.19.1",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
+    "typedoc": "^0.15.0",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
