--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "Prototype for twitch extension to overlay Runelite loot tracker",
   "scripts": {
-    "start": "npm run server && npm run web",
-    "web": "webpack-dev-server --config config/webpack.config.ts",
-    "server": "nodemon --exec ts-node server/index.ts",
-    "docs": "typedoc ./server "
+    "start": "npm run server & npm run web",
+    "server": "webpack -w --config config/webpack.config.ts --config-name server --display-error-details",
+    "web": "webpack-dev-server --config config/webpack.config.ts --config-name web",
+    "docs": "typedoc ./src/server "
   },
   "repository": {
     "type": "git",
@@ -22,27 +22,38 @@
   },
   "homepage": "https://github.com/alxford45/twitch-ext#readme",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^12.6.2",
     "@types/uuid": "^3.4.5",
     "@types/webpack": "^4.4.34",
     "@types/webpack-dev-server": "^3.1.7",
+    "@types/webpack-node-externals": "^1.6.3",
+    "@types/ws": "^6.0.2",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.19.1",
+    "nodemon-webpack-plugin": "^4.0.8",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@types/ws": "^6.0.2",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "rxjs": "^6.5.2",
     "uuid": "^3.3.2",
-    "ws": "^7.1.1"
+    "ws": "^7.1.1",
+    "fast-async": "^7.0.6",
+    "core-js": "^3.2.1"
   }
 }
