--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@marblejs/core": "^2.3.1",
+    "@marblejs/middleware-body": "^2.3.1",
+    "@marblejs/middleware-logger": "^2.3.1",
     "axios": "^0.19.0",
+    "core-js": "^3.2.1",
     "express": "^4.17.1",
+    "fast-async": "^7.0.6",
     "rxjs": "^6.5.2",
     "uuid": "^3.3.2",
-    "ws": "^7.1.1",
-    "fast-async": "^7.0.6",
-    "core-js": "^3.2.1"
+    "ws": "^7.1.1"
   }
 }
